--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,8 @@ nav a {
 
 h1 {
     color: steelblue; 
+    border-bottom: 1px solid #000;
+    
 }
 
 img {
@@ -33,18 +35,22 @@ p {
 
 
 main {
-    max-width: 700px;
     padding-bottom: 150px;
+    grid-column: 2/3;
+    margin: 1rem;
     
 }
 aside {
-    width: 20em;
-    margin: 1em;
+    width: 20rem;
+    margin: 1rem;
     border: 1px solid rgba(0,0,0,0.2); 
-    padding: 1em;
+    padding: 1rem;
     background-color: #eee;
     color: black;
     text-align: center;
+    position: relative;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
 aside img {
@@ -56,10 +62,11 @@ main img {
     width: 150px;
     height: auto;
     border: 1px solid steelblue;
-    padding: 2px;
+    padding: 1px;
     box-shadow: 0 0 30px gray;
     float: right;
     margin: 0 0 1rem 1rem;
+    
 } 
 
 p { 
@@ -73,7 +80,7 @@ p {
 }
 
 footer {
-    margin-top: 1em;
+    margin-top: 1rem;
     border-top: 1px solid #000;
     text-align: center;
 }
@@ -98,6 +105,33 @@ aside h2 {
     top: 683px;
     left: 120px;
 }
+
+header, .grid, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+}
+nav {
+    background-color: steelblue;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+nav a {
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-size: 1.2rem;
+    font-weight: 700;
+    color: #fff;
+}
+
 
 
 
