--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -23,7 +23,7 @@ header{
     padding: 20px;
     padding-bottom: 100px;
     border-style: solid;
-    background-color: #00bfff;
+    background-color: #DBD8B3;
     display: block;
     padding-right: 300px;
 
@@ -60,19 +60,20 @@ div.logo img{
 	margin-left: 35%;
     margin-right: 5%;
 	display: inline;
+    margin-top: -10px;
 }
-div.first{
-    border-style: solid;
-}
+div.hero {
+    background-image: url(images/splash.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 h1{
     color: var(--accent1-color);
+    text-align: center;
+    font-size: 3rem;
 }
-img.customer{
-    width: 500px;
-    height: 500px;
-    border: solid black;
-    border-radius: 5px;
-}
+
 aside{
     padding-left: 15px;
     margin-right: 15%;
@@ -81,19 +82,22 @@ aside{
 
 }
 p{
-    width: 1000px;
-    height: 0px;
+    width: 500px;
+    height: auto;
     margin-top: auto;
     padding: 20px;
     background-color: white;
-    color: black;
+    color: black;    
+    font-size: 2rem;
 }
 div.two{
     border-style: solid;
-    height: 200px;
+    height: 250px;
 }
 h2{
     color: var(--accent1-color);
+    text-align: center;
+    font-size: 2rem;
 }
 div.three{
     border-style: solid;
