--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -20,54 +20,64 @@
 }
 
 header{
-    padding: 20px;
-    padding-bottom: 100px;
-    border-style: solid;
-    background-color: #DBD8B3;
-    display: block;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: whitesmoke;
     padding-right: 300px;
+    align-items: center;
+    background-color: #f0f0f0;
+    border-style: solid;
+}
 
-}
+  
 nav {
-    list-style-type: none;
     text-align: center;
-    overflow: hidden;
     width: 300px;
-    margin: auto;
-    margin-top: 4%;
-    margin-left: 10%;
+    font-size: 2rem;
+    
+    
 }
-li{
-    float: right;
-    border-right:1px solid white;
+nav ul {
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 50px;
+    justify-content: center;
+    justify-items: center;
+    list-style-type: none;
+    margin-left: 50rem;
 }
-li a{
-    display: block;
-    color: white;
+
+nav ul li {
     text-align: center;
     padding: 15px 15px;
+    border-style: ridge;
+    
+}
+nav li a{
+    color: black;
     text-decoration: none;
-    background-color: #00008b;
-    
-    
+}
+nav ul li:hover {
+    background-color: #a6d9f7;
 }
 div.logo img{
-    width: 200px;
-	height: 200px;
-	float:left;
+    width: 400px;
+	height: 400px;
+	float: left;
 	padding-bottom: 10px;
     padding-top: 10px;
-	margin-left: 35%;
+	margin-left: 50%;
     margin-right: 5%;
 	display: inline;
-    margin-top: -10px;
+    margin-top: -8px;
 }
 div.hero {
-    background-image: url(images/splash.jpg);
+    background-image: url(splash.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-  }
+    border-style: solid;
+}
 h1{
     color: var(--accent1-color);
     text-align: center;
@@ -77,7 +87,6 @@ h1{
 aside{
     padding-left: 15px;
     margin-right: 15%;
-    float: right;
     padding: 20px;
 
 }
@@ -101,7 +110,7 @@ h2{
 }
 div.three{
     border-style: solid;
-    height: 1000px;
+    height: 1200px;
 }
 div.gallery {
     margin: 10px;
@@ -120,4 +129,3 @@ nav.sociallinks{
     margin-left: 10%;
     float:right;
 }
-
