--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -19,56 +19,44 @@
     --nav-hover-background-color:var(--accent2-color);
 }
 
-header{
-    padding-top: 50px;
-    padding-bottom: 50px;
-    background-color: whitesmoke;
-    padding-right: 300px;
-    align-items: center;
-    justify-content: center;
-    background-color: #f0f0f0;
-    height: 400px;
-}
-header img {
-    float: left;
-    width: 400px;
-	height: 400px;
-	padding-bottom: 20px;
-    padding-top: 10px;
-	margin-left: 50%;
-    margin-right: -1rem;
-	display: inline;
-    margin-top: -8px;
-}
-
-nav {
-    text-align: center;
-    width: 300px;
-    font-size: 2rem;
-    
-    
-}
-nav ul {
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    grid-template-rows: 50px;
-    justify-content: center;
-    justify-items: center;
-    list-style-type: none;
-    margin-left: 5rem;
-}
-
-nav ul li {
-    text-align: center;
-    padding: 15px 15px;
-    color: black;
-    
-    
-}
-nav li a{
-    color: black;
+/* Reset default margin and padding */
+body, h1, h2, p, figure, ul, li {
+    margin: 0;
+    padding: 0;
+  }
+  
+  /* Set background color and text color */
+  body {
+    background-color: #f2f2f2;
+    color: #333;
+    font-family: Arial, sans-serif;
+  }
+  
+  /* Header styling */
+  header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px;
+  }
+  
+  header img {
+    width: 100px;
+    height: auto;
+  }
+  
+  nav ul {
+    list-style: none;
+    display: flex;
+  }
+  
+  nav ul li {
+    margin-right: 10px;
+  }
+  
+  nav ul li a {
+    color: #fff;
     text-decoration: none;
-}
+  }
 nav ul li:hover {
     background-color: #a6d9f7;
 }
@@ -115,16 +103,24 @@ p{
     font-size: 2rem;
     background-color: #DBD8B3;
 }
-nav.sociallinks{
-    list-style-type: none;
+
+  /* Footer styling */
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 60px;
     text-align: center;
-    overflow: hidden;
-    width: 300px;
-    margin: auto;
-    margin-top: 4%;
-    margin-left: 10%;
-    float:right;
-}
+  }
+  
+  .sociallinks {
+    margin-top: 10px;
+  }
+  
+  .sociallinks a {
+    margin-right: 10px;
+    float: right;
+  }
+
 
 figure{
     margin: auto;
